PR/44340: Brian Buhrow: Raid sets containing wedges cannot be unconfigured and reconfigured without a reboot.